# realtor-scraping

./: .env.example  API_EXAMPLES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  schemas.py  utils.py
app/db/: models.py  session.py
app/routers/: sale_price.py
app/scrapers/: sales_median_price.py
